backend/services/support-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: support-service
spec:
  selector:
    app: support-service
  ports:
    - port: 8000
      targetPort: 8000
